CR-2002-04-12-3: Testsuite: demo_config_dir files should not be used in
                            default settings file
                 Issue:     #163   
                 

CR-2002-04-12-2: Testsuite: removed all rsh calls, testsuite will now
                            only use rlogin.
                 Issue:     #180
                 Bugfix:    fixed tcl error when using help option

JG-2002-04-12-0: Doc:       Added howto describing how to use ssh as
                            transport mechanism for qrsh.
                 Issue:     #228

CR-2002-04-12-0: Bugfix:    corrected spelling mistakes

CR-2002-04-11-4: Testsuite: - only produce warning when re_init core
                              system resets cluster/schedd configuration
                            - removed DEMO category
                            - new interactive menu points:
                              (23) compile and pre install binaries
                              (24) compile and pre install, then install 
                                   and run not completed tests
                              (25) set testsuite debug level
             

CR-2002-04-11-2: Testsuite: Remove temp script files at startup of next 
                            check function instead of next check. This
                            should reduce the number of files to delete
                            at one pass.

CR-2002-04-11-1: Testsuite: Some further modifications for CR-2002-04-11-0

EB-2002-04-11-0: Bugfix:    Solaris processor sets / Migration script
                            - fix: solaris psets won't be used
                            - fix: checkpointed job migration on bad exit state 
                            - some cleanup within shepherd concerning
                              ckpt/pset code
                            - ADOC comments 
                 Issue:     #229, #174

CR-2002-04-11-0: Testsuite: Added testsuite categories, modified framework
                 Enhancem.  
